fix: header review

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
 
+<div>                                  <!--Div creato per includere in header anche i successivi 5 form-->
  <header class="d-flex align-item">
   <a href="https://www.nintendo.com/">
   <img src="immagini/nintendo-red.png" alt="logo Nintendo su sfondo rosso"></a>
@@ -38,7 +39,32 @@
      <a href="support.html">Log in/Sign up</a>
    </nav>
 
+   
  </header>
+ <hr>
+
+<section>
+    <form action="">
+      <select name="MyNintendo" id="Mynintendo">
+       <option value="MyNintendo">My Nintendo Store</option>
+     </select>
+     <select name="Games" id="Games">
+       <option value="Games">Games</option>
+     </select>
+     <select name="intendo-Switch" id="Nintendo switch">
+       <option value="Nintendo-Switch">Nintendo switch</option>
+     </select>
+     <select name="News" id="News & Event">
+       <option value="News&event">News & Event</option>
+    </select>
+    <select name="Play-Nintendo" id="Play Nintendo">
+       <option value="Play-Nintendo">Play Nintendo</option>
+      </select>
+    </form>
+</section>
+
+</div>                                   <!--Div creato per includere in header anche i successivi 5 form--> 
+ 
 
  <main>
 
