feat: added all form to header

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         </select>
   </form>
 
-   <nav>  
-     <a href="https://en-americas-support.nintendo.com/">Support</a>                              
-     <a href="https://www.nintendo.com/wish-list/">Wish List</a>    
-     <a href="https://www.nintendo.com/cart/">Cart</a>
-     <a href="support.html">Log in/Sign up</a>
+   <nav> 
+      <a href="https://en-americas-support.nintendo.com/">Support</a>                              
+      <a href="https://www.nintendo.com/wish-list/">Wish List</a>    
+      <a href="https://www.nintendo.com/cart/">Cart</a>
+      <a href="support.html">Log in/Sign up</a>
    </nav>
 
    
@@ -44,7 +44,8 @@
  <hr>
 
 <section>
-    <form action="">
+    <div class="d-flex justify-content-center">
+        <form action="">
       <select name="MyNintendo" id="Mynintendo">
        <option value="MyNintendo">My Nintendo Store</option>
      </select>
@@ -61,6 +62,7 @@
        <option value="Play-Nintendo">Play Nintendo</option>
       </select>
     </form>
+</div>    
 </section>
 
 </div>                                   <!--Div creato per includere in header anche i successivi 5 form--> 
