feat: background main img added

--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
    </div>    
   </section>
     
-</header>                         
- <hr class="hr2">
-
- <main>
+</header>              
+           
+ <main class="bg-color">
   <div id="justify-img-center">
     <img src="immagini/main-image.jpg" alt="monster hunter rise sunbreack" width="1470" height="512">
   </div>
