--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
    </form>
 
    <nav class="nav">
-      <a href="https://en-americas-support.nintendo.com/">Support</a>
-      <a href="https://www.nintendo.com/wish-list/">Wish List</a>
-      <a href="https://www.nintendo.com/cart/">Cart</a>
-      <a href="support.html">Log in/Sign up</a>
+      <a href="https://en-americas-support.nintendo.com/" target="_blank">Support</a>
+      <a href="https://www.nintendo.com/wish-list/"  target="_blank">Wish List</a>
+      <a href="https://www.nintendo.com/cart/" target="_blank">Cart</a>
+      <a href="link.html" target="_blank">Login/Sign up</a>
    </nav>
 
   </div>
@@ -49,19 +49,19 @@
  <section id="position-section">
    <div class="d-flex justify-content-center">
         <form action="">
-      <select name="MyNintendo" id="Mynintendo" class="sectionsize">
-          <option value="MyNintendo">My Nintendo Store</option>
+    <select name="ntstore" id="ntStore" class="section-size">
+      <option value="MyNintendo">My Nintendo Store</option>
      </select>
-     <select name="Games" id="Games" class="sectionsize">
+     <select name="Games" id="Games" class="section-size">
        <option value="Games">Games</option>
      </select>
-     <select name="intendo-Switch" id="Nintendo switch" class="sectionsize">
+     <select name="intendo-Switch" id="Nintendo switch" class="section-size">
        <option value="Nintendo-Switch">Nintendo switch</option>
      </select>
-     <select name="News" id="News&Event" class="sectionsize">
+     <select name="News" id="News&Event" class="section-size">
        <option value="News&event">News & Event</option>
     </select>
-    <select name="Play-Nintendo" id="Play Nintendo" class="sectionsize">
+    <select name="Play-Nintendo" id="Play Nintendo" class="section-size">
        <option value="Play-Nintendo">Play Nintendo</option>
       </select>
     </form>
@@ -77,10 +77,11 @@
 
   <div class="h1 d-flex align-item">
     <h1>Monster Hunter Rise + Sunbreak</h1>
-    <a class="available-now" href="https://www.nintendo.com/store/products/monster-hunter-rise-plus-sunbreak-switch/">Available Now</a>
+    <a class="available-now" href="https://www.nintendo.com/store/products/monster-hunter-rise-plus-sunbreak-switch/">
+    <span>Available Now</span></a>
   </div>
 
-  <hr class="hr3">
+  <hr class="hr2">
 
  <section>
  <p class="p1">Featured</p>
@@ -88,76 +89,52 @@
  <nav>
 
   <figure>
+
     <div class="d-flex">
 
      <div class="box-model">
-      <a href="https://www.nintendo.com/store/products/live-a-live-switch/">
+      <a href="https://www.nintendo.com/store/products/live-a-live-switch/" target="_blank">
       <img src="immagini/liva-a-live.png" alt="live a live demo">
       <figcaption>LIVE A LIVE - Free demo</figcaption>
       <figcaption>available</figcaption>
-
-      <div class="d-flex">
-      <p id="red-bar">|</p>
-      <p class="figcaption">Nintendo Switch</p>
-      </div>
-
+      <p><span>Nintendo Switch</span></p>
       </a>
      </div>
 
 
     <div class="box-model">
-      <a href="https://www.nintendo.com/store/products/xenoblade-chronicles-3-switch/">
+      <a href="https://www.nintendo.com/store/products/xenoblade-chronicles-3-switch/" target="_blank">
       <img src="immagini/xenoblade3.png" alt="live a live demo">
       <figcaption>LIVE A LIVE - Free demo</figcaption>
       <figcaption>available</figcaption>
-
-      <div class="d-flex">
-      <p id="red-bar">|</p>
-      <p class="figcaption">Nintendo Switch</p>
-      </div>
-
+      <p><span>Nintendo Switch</span></p>
       </a>
     </div>
 
     <div class="box-model">
-      <a href="https://www.nintendo.com/store/products/bayonetta-3-switch/">
+      <a href="https://www.nintendo.com/store/products/bayonetta-3-switch/" target="_blank">
       <img src="immagini/bayonetta.png" alt="live a live demo">
       <figcaption>LIVE A LIVE - Free demo</figcaption>
       <figcaption>available</figcaption>
-
-      <div class="d-flex">
-      <p id="red-bar">|</p>
-      <p class="figcaption">Nintendo Switch</p>
-      </div>
-
+      <p><span>Nintendo Switch</span></p>
       </a>
     </div>
 
     <div class="box-model">
-      <a href="https://www.nintendo.com/store/products/fall-guys-switch/">
+      <a href="https://www.nintendo.com/store/products/fall-guys-switch/" target="_blank">
       <img src="immagini/fall-guys.png" alt="live a live demo">
       <figcaption>LIVE A LIVE - Free demo</figcaption>
       <figcaption>available</figcaption>
-
-      <div class="d-flex">
-      <p id="red-bar">|</p>
-      <p class="figcaption">Nintendo Switch</p>
-      </div>
-
+      <p><span>Nintendo Switch</span></p>
       </a>
     </div>
 
     <div class="box-model">
-      <a href="https://www.nintendo.com/store/products/fire-emblem-warriors-three-hopes-switch/">
+      <a href="https://www.nintendo.com/store/products/fire-emblem-warriors-three-hopes-switch/" target="_blank">
       <img src="immagini/fire-emblem.png" alt="live a live demo">
       <figcaption>LIVE A LIVE - Free demo</figcaption>
       <figcaption>available</figcaption>
-
-      <div class="d-flex">
-      <p id="red-bar">|</p>
-      <p class="figcaption">Nintendo Switch</p>
-      </div>
-
+      <p><span>Nintendo Switch</span></p>
       </a>
     </div>
 
@@ -167,10 +144,12 @@
 
  </nav>
 
+ <hr class="hr3">
+
  </section>
 
-
  </main>
+
 
  <footer>
 
