--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    <img src="immagini/nintendo-red.png" alt="logo Nintendo su sfondo rosso"></a>
    <div class="margin-input">
     <form action="">
-       <input type="search" placeholder="Search games, hardware, news, etc" name="categories">
+       <input type="search" placeholder="Search games, hardware, news, etc" name="categories" id="categories">
         <select id="categories" name="categories" class="form-style">
           <option class="form-style">All categories</option>
           <option class="form-style">Games</option>
@@ -49,7 +49,7 @@
  <section id="position-section">
    <div class="d-flex justify-content-center">
         <form action="">
-    <select name="ntstore" id="ntStore" class="section-size">
+    <select name="ntstore" id="ntStore" class="section-size">       <!--Select No-borders-->
       <option value="MyNintendo">My Nintendo Store</option>
      </select>
      <select name="Games" id="Games" class="section-size">
@@ -148,8 +148,8 @@
 
  </section>
 
- </main>
 
+ </main>
 
  <footer>
 
