Feat: hover nav added

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
      <div class="box-model">
       <a href="https://www.nintendo.com/store/products/live-a-live-switch/" target="_blank">
       <img src="immagini/liva-a-live.png" alt="live a live demo">
-      <figcaption>LIVE A LIVE - Free demo</figcaption>
-      <figcaption>available</figcaption>
+      <figcaption>LIVE A LIVE - Free demo <span>available</span>
+      </figcaption>
       <p><span>Nintendo Switch</span></p>
       </a>
      </div>
@@ -105,8 +105,8 @@
     <div class="box-model">
       <a href="https://www.nintendo.com/store/products/xenoblade-chronicles-3-switch/" target="_blank">
       <img src="immagini/xenoblade3.png" alt="live a live demo">
-      <figcaption>LIVE A LIVE - Free demo</figcaption>
-      <figcaption>available</figcaption>
+      <figcaption>LIVE A LIVE - Free demo <span>available</span>
+      </figcaption>
       <p><span>Nintendo Switch</span></p>
       </a>
     </div>
@@ -114,8 +114,8 @@
     <div class="box-model">
       <a href="https://www.nintendo.com/store/products/bayonetta-3-switch/" target="_blank">
       <img src="immagini/bayonetta.png" alt="live a live demo">
-      <figcaption>LIVE A LIVE - Free demo</figcaption>
-      <figcaption>available</figcaption>
+      <figcaption>LIVE A LIVE - Free demo<span>available</span>
+      </figcaption>
       <p><span>Nintendo Switch</span></p>
       </a>
     </div>
@@ -123,8 +123,8 @@
     <div class="box-model">
       <a href="https://www.nintendo.com/store/products/fall-guys-switch/" target="_blank">
       <img src="immagini/fall-guys.png" alt="live a live demo">
-      <figcaption>LIVE A LIVE - Free demo</figcaption>
-      <figcaption>available</figcaption>
+      <figcaption>LIVE A LIVE - Free demo<span>available</span>
+      </figcaption>
       <p><span>Nintendo Switch</span></p>
       </a>
     </div>
@@ -132,8 +132,8 @@
     <div class="box-model">
       <a href="https://www.nintendo.com/store/products/fire-emblem-warriors-three-hopes-switch/" target="_blank">
       <img src="immagini/fire-emblem.png" alt="live a live demo">
-      <figcaption>LIVE A LIVE - Free demo</figcaption>
-      <figcaption>available</figcaption>
+      <figcaption>LIVE A LIVE - Free demo<span>available</span>
+      </figcaption>
       <p><span>Nintendo Switch</span></p>
       </a>
     </div>
@@ -147,7 +147,6 @@
  <hr class="hr3">
 
  </section>
-
 
  </main>
 
