feat: header complete

--- a/index.html
+++ b/index.html
@@ -1,160 +1,172 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Scopri Nintendo Switch, Nintendo 3DS, Nintendo 2DS, Wii U e amiibo. Ricevi supporto, trova informazioni
-    sui giochi e su My Nintendo e scopri le ultime ...">
-    <meta name="author" content="Team-3 Develhope">
-    <title>Nintendo Official Site: Consoles, Games, News, and More nintendo.com</title>
-    <link rel="icon" type="image/x-icon" href="immagini/super-mario.ico">
 
-    <link rel="stylesheet" text="style/css" href="CSS/stili.css">
-    <link rel="stylesheet" text="style/css" href="CSS/classi.css">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Scopri Nintendo Switch, Nintendo 3DS, Nintendo 2DS, Wii U e amiibo. Ricevi supporto, trova informazioni
+    sui giochi e su My Nintendo e scopri le ultime ...">
+  <meta name="author" content="Team-3 Develhope">
+  <title>Nintendo Official Site: Consoles, Games, News, and More nintendo.com</title>
+  <link rel="icon" type="image/x-icon" href="immagini/super-mario.ico">
+
+  <link rel="stylesheet" text="style/css" href="CSS/stili.css">
+  <link rel="stylesheet" text="style/css" href="CSS/classi.css">
 </head>
 
 <body>
 
- <header>
+  <header>
 
-  <div class="d-flex align-item">
-   <a href="https://www.nintendo.com/">
-   <img src="immagini/nintendo-red.png" alt="logo Nintendo su sfondo rosso"></a>
-   <div class="margin-input">
-    <form action="">
-       <input type="search" placeholder="Search games, hardware, news, etc" name="categories" id="categories">
-        <select id="categories" name="categories" class="form-style">
-          <option class="form-style">All categories</option>
-          <option class="form-style">Games</option>
-          <option class="form-style">Hardware</option>
-          <option class="form-style">Merchandise</option>
-          <option class="form-style">News & Events</option>
-          <option class="form-style">Supports</option>
-        </select>
+    <div class="d-flex align-item">
+      <a href="https://www.nintendo.com/">
+        <img src="immagini/nintendo-red.png" alt="logo Nintendo su sfondo rosso"></a>
+      <div class="margin-input">
+        <form action="">
+          <input type="search" placeholder="Search games, hardware, news, etc" name="categories" id="categories">
+          <select id="categories" name="categories" class="form-style">
+            <option class="form-style">All categories</option>
+            <option class="form-style">Games</option>
+            <option class="form-style">Hardware</option>
+            <option class="form-style">Merchandise</option>
+            <option class="form-style">News & Events</option>
+            <option class="form-style">Supports</option>
+          </select>
       </div>
 
-   </form>
+      </form>
 
-   <nav class="nav">
-      <a href="https://en-americas-support.nintendo.com/" target="_blank">Support</a>
-      <a href="https://www.nintendo.com/wish-list/"  target="_blank">Wish List</a>
-      <a href="https://www.nintendo.com/cart/" target="_blank">Cart</a>
-      <a href="link.html" target="_blank">Login/Sign up</a>
-   </nav>
+      <nav class="nav">
+        <a href="https://en-americas-support.nintendo.com/" target="_blank">Support</a>
+        <a href="https://www.nintendo.com/wish-list/" target="_blank">Wish List</a>
+        <a href="https://www.nintendo.com/cart/" target="_blank">Cart</a>
+        <a href="link.html" target="_blank">Login/Sign up</a>
+      </nav>
 
-  </div>
-  <hr class="hr1">
+    </div>
+    <hr class="hr1">
 
- <section id="position-section">
-   <div class="d-flex justify-content-center">
+    <section id="position-section">
+      <div class="d-flex justify-content-center">
         <form action="">
-    <select name="ntstore" id="ntStore" class="section-size">       <!--Select No-borders-->
-      <option value="MyNintendo">My Nintendo Store</option>
-     </select>
-     <select name="Games" id="Games" class="section-size">
-       <option value="Games">Games</option>
-     </select>
-     <select name="intendo-Switch" id="Nintendo switch" class="section-size">
-       <option value="Nintendo-Switch">Nintendo switch</option>
-     </select>
-     <select name="News" id="News&Event" class="section-size">
-       <option value="News&event">News & Event</option>
-    </select>
-    <select name="Play-Nintendo" id="Play Nintendo" class="section-size">
-       <option value="Play-Nintendo">Play Nintendo</option>
-      </select>
-    </form>
-   </div>
-  </section>
+          <select name="ntstore" id="ntStore" class="section-size">
+            <!--Select No-borders-->
+            <option value="MyNintendo">My Nintendo Store</option>
+          </select>
+          <select name="Games" id="Games" class="section-size">
+            <option value="Games">Games</option>
+          </select>
+          <select name="intendo-Switch" id="Nintendo switch" class="section-size">
+            <option value="Nintendo-Switch">Nintendo switch</option>
+          </select>
+          <select name="News" id="News&Event" class="section-size">
+            <option value="News&event">News & Event</option>
+          </select>
+          <select name="Play-Nintendo" id="Play Nintendo" class="section-size">
+            <option value="Play-Nintendo">Play Nintendo</option>
+          </select>
+        </form>
+      </div>
+    </section>
 
-</header>
+  </header>
 
- <main class="bg-color">
-  <div id="justify-img-center">
-    <img src="immagini/main-image.jpg" alt="monster hunter rise sunbreack" width="1470" height="512">
-  </div>
-
-  <div class="h1 d-flex align-item">
-    <h1>Monster Hunter Rise + Sunbreak</h1>
-    <a class="available-now" href="https://www.nintendo.com/store/products/monster-hunter-rise-plus-sunbreak-switch/">
-    <span>Available Now</span></a>
-  </div>
-
-  <hr class="hr2">
-
- <section>
- <p class="p1">Featured</p>
-
- <nav>
-
-  <figure>
-
-    <div class="d-flex">
-
-     <div class="box-model">
-      <a href="https://www.nintendo.com/store/products/live-a-live-switch/" target="_blank">
-      <img src="immagini/liva-a-live.png" alt="live a live demo">
-      <figcaption>LIVE A LIVE - Free demo <span>available</span>
-      </figcaption>
-      <p><span>Nintendo Switch</span></p>
-      </a>
-     </div>
-
-
-    <div class="box-model">
-      <a href="https://www.nintendo.com/store/products/xenoblade-chronicles-3-switch/" target="_blank">
-      <img src="immagini/xenoblade3.png" alt="live a live demo">
-      <figcaption>LIVE A LIVE - Free demo <span>available</span>
-      </figcaption>
-      <p><span>Nintendo Switch</span></p>
-      </a>
+  <main class="bg-color">
+    <div id="justify-img-center">
+      <img src="immagini/main-image.jpg" alt="monster hunter rise sunbreack" width="1470" height="512">
     </div>
 
-    <div class="box-model">
-      <a href="https://www.nintendo.com/store/products/bayonetta-3-switch/" target="_blank">
-      <img src="immagini/bayonetta.png" alt="live a live demo">
-      <figcaption>LIVE A LIVE - Free demo<span>available</span>
-      </figcaption>
-      <p><span>Nintendo Switch</span></p>
-      </a>
-    </div>
+    <div class="d-flex align-item">
+      <div class="h1 d-flex align-item">
+        <h1>Monster Hunter Rise + Sunbreak</h1>
+        <a class="available-now"
+          href="https://www.nintendo.com/store/products/monster-hunter-rise-plus-sunbreak-switch/">
+          <span>Available Now</span></a>
+      </div>
 
-    <div class="box-model">
-      <a href="https://www.nintendo.com/store/products/fall-guys-switch/" target="_blank">
-      <img src="immagini/fall-guys.png" alt="live a live demo">
-      <figcaption>LIVE A LIVE - Free demo<span>available</span>
-      </figcaption>
-      <p><span>Nintendo Switch</span></p>
-      </a>
-    </div>
-
-    <div class="box-model">
-      <a href="https://www.nintendo.com/store/products/fire-emblem-warriors-three-hopes-switch/" target="_blank">
-      <img src="immagini/fire-emblem.png" alt="live a live demo">
-      <figcaption>LIVE A LIVE - Free demo<span>available</span>
-      </figcaption>
-      <p><span>Nintendo Switch</span></p>
-      </a>
-    </div>
+       <a href="https://www.esrb.org/ratings-guide/">
+       <img src="immagini/teen-img.png" alt="Teen esrb logo"></a>
+       <p>Blood, Suggestive Themes, Language, Fantasy Violence, Crude <br> Humor</p>
 
     </div>
 
-  </figure>
 
- </nav>
 
- <hr class="hr3">
+    <hr class="hr2">
 
- </section>
+    <section>
+      <p class="p1">Featured</p>
 
- </main>
+      <nav>
 
- <footer>
+        <figure>
 
- </footer>
+          <div class="d-flex">
+
+            <div class="box-model">
+              <a href="https://www.nintendo.com/store/products/live-a-live-switch/" target="_blank">
+                <img src="immagini/liva-a-live.png" alt="live a live demo">
+                <figcaption>LIVE A LIVE - Free demo <span>available</span>
+                </figcaption>
+                <p><span>Nintendo Switch</span></p>
+              </a>
+            </div>
+
+
+            <div class="box-model">
+              <a href="https://www.nintendo.com/store/products/xenoblade-chronicles-3-switch/" target="_blank">
+                <img src="immagini/xenoblade3.png" alt="live a live demo">
+                <figcaption>LIVE A LIVE - Free demo <span>available</span>
+                </figcaption>
+                <p><span>Nintendo Switch</span></p>
+              </a>
+            </div>
+
+            <div class="box-model">
+              <a href="https://www.nintendo.com/store/products/bayonetta-3-switch/" target="_blank">
+                <img src="immagini/bayonetta.png" alt="live a live demo">
+                <figcaption>LIVE A LIVE - Free demo<span>available</span>
+                </figcaption>
+                <p><span>Nintendo Switch</span></p>
+              </a>
+            </div>
+
+            <div class="box-model">
+              <a href="https://www.nintendo.com/store/products/fall-guys-switch/" target="_blank">
+                <img src="immagini/fall-guys.png" alt="live a live demo">
+                <figcaption>LIVE A LIVE - Free demo<span>available</span>
+                </figcaption>
+                <p><span>Nintendo Switch</span></p>
+              </a>
+            </div>
+
+            <div class="box-model">
+              <a href="https://www.nintendo.com/store/products/fire-emblem-warriors-three-hopes-switch/"
+                target="_blank">
+                <img src="immagini/fire-emblem.png" alt="live a live demo">
+                <figcaption>LIVE A LIVE - Free demo<span>available</span>
+                </figcaption>
+                <p><span>Nintendo Switch</span></p>
+              </a>
+            </div>
+
+          </div>
+
+        </figure>
+
+      </nav>
+
+      <hr class="hr3">
+
+    </section>
+
+  </main>
+
+  <footer>
+
+  </footer>
 
 </body>
 
 </html>
-
