--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
 
       </form>
 
-      <nav class="nav">
+
+      <nav class="nav nav-bar">
+
         <a href="https://en-americas-support.nintendo.com/" target="_blank">Support</a>
         <a href="https://www.nintendo.com/wish-list/" target="_blank">Wish List</a>
         <a href="https://www.nintendo.com/cart/" target="_blank">Cart</a>
         <a href="link.html" target="_blank">Login/Sign up</a>
+
+
+
       </nav>
 
     </div>
@@ -73,30 +78,39 @@
   </header>
 
   <main class="bg-color">
-    <div id="justify-img-center">
-      <img src="immagini/main-image.jpg" alt="monster hunter rise sunbreack" width="1470" height="512">
-    </div>
 
-    <div class="d-flex align-item">
-      <div class="h1 d-flex align-item">
-        <h1>Monster Hunter Rise + Sunbreak</h1>
-        <a class="available-now"
-          href="https://www.nintendo.com/store/products/monster-hunter-rise-plus-sunbreak-switch/">
-          <span>Available Now</span></a>
+    <picture>
+      <div class="justify-img-center">
+        <img src="immagini/main-image.jpg" alt="main image" width="1470px" height="512px">
       </div>
+    </picture>
 
-       <a href="https://www.esrb.org/ratings-guide/">
-       <img src="immagini/teen-img.png" alt="Teen esrb logo"></a>
-       <p>Blood, Suggestive Themes, Language, Fantasy Violence, Crude <br> Humor</p>
-
+    <div class="d-grid img-position">
+      <h1 class="h1">Monster Hunter Rise + Sunbreak</h1>
+      <button class="available-now"><a class="available-now-href "
+          href="https://www.nintendo.com/store/products/live-a-live-switch/">Available Now</a>
+      </button>
+      <div>
+        <a class="p-no-dec" href="https://www.esrb.org/ratings-guide/">
+          <div class="d-flex align-item">
+            <div>
+              <img src="immagini/teen-img.png" alt="teen image">
+            </div>
+            <div class="teen-img-tex">
+              <p>Blood, Suggestive Themes, Language, Fantasy Violence, Crude <br> Humor</p>
+            </div>
+          </div>
+      </div>
+      </a>
     </div>
+    <hr class="hr2 img-position">
+    <!--Gray line-->
 
 
-
-    <hr class="hr2">
-
-    <section>
-      <p class="p1">Featured</p>
+    <section class="nav-margin-bottom ">
+      <div>
+        <p class="img-position h2">Featured</p>
+      </div>
 
       <nav>
 
@@ -157,9 +171,9 @@
 
       </nav>
 
-      <hr class="hr3">
-
     </section>
+
+    <hr class="hr3">
 
   </main>
 
