feat: hover img added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <div class="d-grid img-position">
       <h1 class="h1">Monster Hunter Rise + Sunbreak</h1>
-      <button class="available-now"><a class="available-now-href "
+      <button class="available-now"><a class="available-now-href"
           href="https://www.nintendo.com/store/products/live-a-live-switch/">Available Now</a>
       </button>
       <div>
@@ -103,7 +103,7 @@
     <!--Gray line-->
 
 
-    <section class="nav-margin-bottom ">
+    <section class="">
       <div>
         <p class="img-position h2">Featured</p>
       </div>
@@ -112,7 +112,7 @@
 
         <figure>
 
-          <div class="d-flex">
+          <div class="d-flex margin-bottom">
 
             <div class="box-model">
               <a href="https://www.nintendo.com/store/products/live-a-live-switch/" target="_blank">
@@ -168,7 +168,7 @@
       </nav>
 
       <hr class="hr3">
-      
+
     </section>
 
     <section id="news">
@@ -230,13 +230,13 @@
             <div>
                 <div id="zelda-bg">
                     <img class="characters-img" src="immagini/characters/The Legend of Zelda.png" alt="The Legend of Zelda">
-                </div>        
+                </div>
                 <h3>The Legend of Zelda</h3>
             </div>
             <div>
                 <div id="animal-bg">
                     <img class="characters-img" src="immagini/characters/Animal Crossing.png" alt="Animal Crossing">
-                </div>    
+                </div>
                 <h3>Animal Crossing</h3>
             </div>
             <div>
@@ -245,7 +245,7 @@
                 </div>
                 <h3>Kirby</h3>
             </div>
-        </div>   
+        </div>
     </section>
     <hr>
 
