fixed: aligment fixed

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
   <header>
 
+    <div class="prova">
+
     <div class="d-flex align-item">
       <a href="https://www.nintendo.com/">
         <img src="immagini/nintendo-red.png" alt="logo Nintendo su sfondo rosso"></a>
@@ -33,10 +35,9 @@
             <option class="form-style">News & Events</option>
             <option class="form-style">Supports</option>
           </select>
+        </form>
       </div>
-
-      </form>
-
+    </div>
 
       <nav class="nav nav-bar">
         <a href="https://en-americas-support.nintendo.com/" target="_blank">Support</a>
@@ -44,8 +45,8 @@
         <a href="https://www.nintendo.com/cart/" target="_blank">Cart</a>
         <a href="link.html" target="_blank">Login/Sign up</a>
       </nav>
-
     </div>
+
     <hr class="hr1">
 
     <section id="position-section">
@@ -186,7 +187,7 @@
 
       <div class="cta">
         <p>Shop games, exclusive Nintendo merchandise, and more! Plus, get free shipping on orders $50 and over.</p>
-        
+
         <form action="https://www.nintendo.com/store">
           <button type="submit">Start shopping</button>
         </form>
@@ -207,7 +208,7 @@
 
       <div class="cta">
         <p>Find the perfect Nintendo Switch system for you.</p>
-        
+
         <form action="https://www.nintendo.com/switch">
           <button type="submit">Start shopping</button>
         </form>
