--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   <meta name="description" content="Scopri Nintendo Switch, Nintendo 3DS, Nintendo 2DS, Wii U e amiibo. Ricevi supporto, trova informazioni
     sui giochi e su My Nintendo e scopri le ultime ...">
   <meta name="author" content="Team-3 Develhope">
+  <!--Tag Meta property compatibility linkin FB-->
+  <meta property="og:image" content="img.png">
+  <meta property="og:description" content="Scopri Nintendo Switch, Nintendo 3DS, Nintendo 2DS, Wii U e amiibo. Ricevi supporto, trova informazioni
+  sui giochi e su My Nintendo e scopri le ultime ...">
+  <meta property="og:title" content="TNintendo Official Site: Consoles, Games, News, and More nintendo.com">
+
   <title>Nintendo Official Site: Consoles, Games, News, and More nintendo.com</title>
+
   <link rel="icon" type="image/x-icon" href="immagini/super-mario.ico">
 
   <link rel="stylesheet" text="style/css" href="CSS/stili.css">
@@ -292,8 +299,7 @@
         </form>
       </div>
     </section>
-
-    <hr>
+    <hr class="hr3">
 
     <!-- Gaming Systems -->
     <section class="gaming-systems">
@@ -370,7 +376,9 @@
       </div>
       <a href="#" id="news-button">See all news articles</a>
     </section>
-    <hr>
+
+    <hr class="hr3">
+
     <section id="characters">
       <h2 id="characters-title">Characters</h2>
       <div class="characters-container">
@@ -400,7 +408,6 @@
         </div>
       </div>
     </section>
-    <hr>
 
     <hr class="hr3">
 
@@ -408,22 +415,30 @@
 
   <footer>
     <section id="first-row-footer">
-      <div id="footer-logo">
-        <svg id="nintendo-footer-logo" viewBox="0 0 97 24" xmlns="http://www.w3.org/2000/svg" width="195" role="presentation" alt="" data-testid="NintendoRacetrackLogoIcon" size="195" color="currentColor"><path d="M17.945 14.157l-4.85-7.838H9.609V17.59h3.486V9.752l4.85 7.838h3.456V6.32h-3.486l.03 7.837zm27.554-4.04V8.993H43.68v-1.52h-3.395v1.52h-1.849v1.124h1.85v7.473h3.394v-7.473h1.82zM23.341 17.56h3.364v-7.474h-3.364v7.474zm0-8.932h3.395V6.319H23.34v2.309zm59.17.942c-2.728 0-4.941 1.883-4.941 4.192s2.213 4.193 4.94 4.193c2.729 0 4.942-1.884 4.942-4.193 0-2.309-2.213-4.192-4.941-4.192zm1.364 5.772c0 1.185-.698 1.67-1.364 1.67-.667 0-1.395-.485-1.395-1.67v-3.16c0-1.184.697-1.67 1.395-1.67.666 0 1.364.486 1.364 1.67v3.16zm-10.73-4.891c-.547-.304-1.123-.608-1.91-.669-2.426-.212-4.305 1.945-4.305 3.92 0 2.612 2 3.554 2.304 3.706 1.152.516 2.607.547 3.88-.274v.426h3.334V6.32h-3.334c.03 0 .03 2.4.03 4.13zm.03 3.342v1.336c0 1.155-.789 1.458-1.334 1.458-.546 0-1.334-.303-1.334-1.458v-2.673c0-1.155.788-1.458 1.334-1.458.515 0 1.333.303 1.333 1.458v1.337zM34.616 9.752c-1.122.03-2.031.516-2.698 1.124v-.79h-3.365v7.474h3.365v-4.922c0-.638.697-1.367 1.607-1.367.909 0 1.546.73 1.546 1.367v4.922h3.364v-4.071c0-2.947-2.546-3.798-3.82-3.737zm27.433 0a4.075 4.075 0 0 0-2.698 1.124v-.79h-3.365v7.474h3.365v-4.922c0-.638.697-1.367 1.606-1.367.91 0 1.546.73 1.546 1.367v4.922h3.365v-4.071c0-2.947-2.546-3.798-3.82-3.737zm-7.063 4.101c0-2.309-2.243-4.253-4.971-4.253-2.759 0-4.972 1.884-4.972 4.193 0 2.308 2.213 4.192 4.972 4.192 2.273 0 4.213-1.306 4.789-3.068H51.44v.455c0 1.367-.91 1.671-1.394 1.671-.515 0-1.425-.304-1.425-1.67v-1.55l6.366.03zm-6.123-2.643a1.391 1.391 0 0 1 1.182-.668c.455 0 .91.213 1.182.668.212.365.212.82.212 1.458H48.62c0-.637.03-1.063.243-1.458zm39.921-3.493c0-.365-.272-.547-.818-.547h-.758v1.914h.455v-.79h.242l.364.79h.515l-.424-.851c.273-.091.424-.273.424-.516zm-.879.273h-.242v-.547h.212c.273 0 .424.091.424.274 0 .212-.12.273-.394.273zm.03-1.58c-.94 0-1.727.79-1.727 1.732s.788 1.732 1.728 1.732 1.727-.79 1.727-1.732a1.73 1.73 0 0 0-1.727-1.732zm0 3.13a1.413 1.413 0 0 1-1.394-1.398c0-.76.637-1.398 1.395-1.398.757 0 1.394.638 1.394 1.398 0 .76-.637 1.397-1.394 1.397zM84.148 0H12.64C5.062-.03 0 5.438 0 11.97c0 6.53 5.062 11.939 12.67 11.939h71.508c7.608 0 12.67-5.408 12.67-11.94C96.818 5.44 91.726 0 84.148 0zm-.03 20.993H12.671c-6.033.03-9.7-4.041-9.7-9.023 0-4.983 3.698-8.993 9.7-9.023h71.446c6.002 0 9.7 4.04 9.7 9.023 0 4.982-3.668 9.023-9.7 9.023z" fill="#fff"></path></svg>
-      </div>
-      <div id="social">
-        <img class="social-icons" src="immagini/social icons/facebook.png" alt="">
-        <img class="social-icons" src="immagini/social icons/instagram.png" alt="">
-        <img class="social-icons" src="immagini/social icons/twitter.png" alt="">
-        <img class="social-icons" src="immagini/social icons/youtube.png" alt="">
-      </div>
-    </section> 
+
+        <div id="footer-logo margin-logo ">
+          <svg id="nintendo-footer-logo" viewBox="0 0 97 24" xmlns="http://www.w3.org/2000/svg" width="195"
+            role="presentation" alt="" data-testid="NintendoRacetrackLogoIcon" size="195" color="currentColor">
+            <path
+              d="M17.945 14.157l-4.85-7.838H9.609V17.59h3.486V9.752l4.85 7.838h3.456V6.32h-3.486l.03 7.837zm27.554-4.04V8.993H43.68v-1.52h-3.395v1.52h-1.849v1.124h1.85v7.473h3.394v-7.473h1.82zM23.341 17.56h3.364v-7.474h-3.364v7.474zm0-8.932h3.395V6.319H23.34v2.309zm59.17.942c-2.728 0-4.941 1.883-4.941 4.192s2.213 4.193 4.94 4.193c2.729 0 4.942-1.884 4.942-4.193 0-2.309-2.213-4.192-4.941-4.192zm1.364 5.772c0 1.185-.698 1.67-1.364 1.67-.667 0-1.395-.485-1.395-1.67v-3.16c0-1.184.697-1.67 1.395-1.67.666 0 1.364.486 1.364 1.67v3.16zm-10.73-4.891c-.547-.304-1.123-.608-1.91-.669-2.426-.212-4.305 1.945-4.305 3.92 0 2.612 2 3.554 2.304 3.706 1.152.516 2.607.547 3.88-.274v.426h3.334V6.32h-3.334c.03 0 .03 2.4.03 4.13zm.03 3.342v1.336c0 1.155-.789 1.458-1.334 1.458-.546 0-1.334-.303-1.334-1.458v-2.673c0-1.155.788-1.458 1.334-1.458.515 0 1.333.303 1.333 1.458v1.337zM34.616 9.752c-1.122.03-2.031.516-2.698 1.124v-.79h-3.365v7.474h3.365v-4.922c0-.638.697-1.367 1.607-1.367.909 0 1.546.73 1.546 1.367v4.922h3.364v-4.071c0-2.947-2.546-3.798-3.82-3.737zm27.433 0a4.075 4.075 0 0 0-2.698 1.124v-.79h-3.365v7.474h3.365v-4.922c0-.638.697-1.367 1.606-1.367.91 0 1.546.73 1.546 1.367v4.922h3.365v-4.071c0-2.947-2.546-3.798-3.82-3.737zm-7.063 4.101c0-2.309-2.243-4.253-4.971-4.253-2.759 0-4.972 1.884-4.972 4.193 0 2.308 2.213 4.192 4.972 4.192 2.273 0 4.213-1.306 4.789-3.068H51.44v.455c0 1.367-.91 1.671-1.394 1.671-.515 0-1.425-.304-1.425-1.67v-1.55l6.366.03zm-6.123-2.643a1.391 1.391 0 0 1 1.182-.668c.455 0 .91.213 1.182.668.212.365.212.82.212 1.458H48.62c0-.637.03-1.063.243-1.458zm39.921-3.493c0-.365-.272-.547-.818-.547h-.758v1.914h.455v-.79h.242l.364.79h.515l-.424-.851c.273-.091.424-.273.424-.516zm-.879.273h-.242v-.547h.212c.273 0 .424.091.424.274 0 .212-.12.273-.394.273zm.03-1.58c-.94 0-1.727.79-1.727 1.732s.788 1.732 1.728 1.732 1.727-.79 1.727-1.732a1.73 1.73 0 0 0-1.727-1.732zm0 3.13a1.413 1.413 0 0 1-1.394-1.398c0-.76.637-1.398 1.395-1.398.757 0 1.394.638 1.394 1.398 0 .76-.637 1.397-1.394 1.397zM84.148 0H12.64C5.062-.03 0 5.438 0 11.97c0 6.53 5.062 11.939 12.67 11.939h71.508c7.608 0 12.67-5.408 12.67-11.94C96.818 5.44 91.726 0 84.148 0zm-.03 20.993H12.671c-6.033.03-9.7-4.041-9.7-9.023 0-4.983 3.698-8.993 9.7-9.023h71.446c6.002 0 9.7 4.04 9.7 9.023 0 4.982-3.668 9.023-9.7 9.023z"
+              fill="#fff"></path>
+          </svg>
+        </div>
+        <div id="social">
+          <img class="social-icons" src="immagini/social icons/facebook.png" alt="">
+          <img class="social-icons" src="immagini/social icons/instagram.png" alt="">
+          <img class="social-icons" src="immagini/social icons/twitter.png" alt="">
+          <img class="social-icons" src="immagini/social icons/youtube.png" alt="">
+        </div>
+
+    </section>
+
     <section id="second-row-footer">
       <div class="border-left-section about-nintendo">
         <h3>About Nintendo</h3>
         <a href="#">Careers</a>
         <a href="#">Corporate Social Responsibility</a>
-      </div>  
+      </div>
       <div class="border-left-section shop">
         <h3>Shop</h3>
         <a href="#">Games</a>
@@ -433,7 +448,7 @@
         <a href="#">Exclusives</a>
         <a href="#">Online service</a>
         <a href="#">Nintendo NY store</a>
-      </div> 
+      </div>
       <div class="border-left-section my-nintendo-store-orders">
         <h3>My Nintendo Store orders</h3>
         <a href="#">Order details</a>
@@ -459,18 +474,19 @@
         <h3>Community</h3>
         <a href="#">Community guidelines</a>
         <a href="#">Online safety principles</a>
-      </div>  
+      </div>
       <div class="border-left-section footer-privacy">
         <h3>Privacy</h3>
         <a href="#">Privacy policy</a>
         <a href="#">Cookies and interest-based ads</a>
-      </div> 
+      </div>
     </section>
     <section id="third-row-footer">
       <img src="immagini/privacy-certified.jpg" alt="Privacy ESRB">
     </section>
     <section id="fourth-row-footer">
-      <p>© Nintendo. Games are property of their respective owners. Nintendo of America Inc. Headquarters are in Redmond, Washington, USA</p>
+      <p>&copy; Nintendo. Games are property of their respective owners. Nintendo of America Inc. Headquarters are in
+        Redmond, Washington, USA</p>
       <ul>
         <li><a href="#">Contact us</a></li>
         <li><a href="#">Website feedback</a></li>
@@ -478,9 +494,20 @@
         <li><a href="#">Documents & Policies</a></li>
       </ul>
       <div id="region-footer">
-        <svg id="us-flag" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" xml:space="preserve" width="24" role="presentation" alt="" data-testid="FlagUsaIcon" color="currentColor" size="24"><path d="M29.7 5.7H2.3C1 5.7 0 6.7 0 8v16c0 1.3 1 2.3 2.3 2.3h27.4c1.3 0 2.3-1 2.3-2.3V8c0-1.3-1-2.3-2.3-2.3z" fill="#fff"></path><path fill="#bf0a30" d="M0 10.3h32v2.3H0zM32 8H0c0-1.3 1-2.3 2.3-2.3h27.4C31 5.7 32 6.7 32 8zM32 24H0c0 1.3 1 2.3 2.3 2.3h27.4c1.3 0 2.3-1 2.3-2.3zM0 14.9h32v2.3H0zM0 19.4h32v2.3H0z"></path><path d="M16 17.1H0V8c0-1.3 1-2.3 2.3-2.3H16v11.4z" fill="#002868"></path></svg>
+        <svg id="us-flag" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" xml:space="preserve" width="24"
+          role="presentation" alt="" data-testid="FlagUsaIcon" color="currentColor" size="24">
+          <path d="M29.7 5.7H2.3C1 5.7 0 6.7 0 8v16c0 1.3 1 2.3 2.3 2.3h27.4c1.3 0 2.3-1 2.3-2.3V8c0-1.3-1-2.3-2.3-2.3z"
+            fill="#fff"></path>
+          <path fill="#bf0a30"
+            d="M0 10.3h32v2.3H0zM32 8H0c0-1.3 1-2.3 2.3-2.3h27.4C31 5.7 32 6.7 32 8zM32 24H0c0 1.3 1 2.3 2.3 2.3h27.4c1.3 0 2.3-1 2.3-2.3zM0 14.9h32v2.3H0zM0 19.4h32v2.3H0z">
+          </path>
+          <path d="M16 17.1H0V8c0-1.3 1-2.3 2.3-2.3H16v11.4z" fill="#002868"></path>
+        </svg>
         <a href="#">Change region</a>
       </div>
     </section>
   </footer>
+
 </body>
+
+</html>
