feat: header fixer scrolling added

--- a/index.html
+++ b/index.html
@@ -101,10 +101,8 @@
 
     <hr class="hr1">
 
-    <section id="position-section">
-      <div class="d-flex justify-content-center">
+    <section class="d-flex justify-content-center" id="margin-top">
         <form action="" class="hyper-align">
-
 
           <div class="hyper-align select-hover">
             <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" role="presentation" alt=""
@@ -175,7 +173,6 @@
           </div>
 
         </form>
-      </div>
     </section>
 
   </header>
@@ -184,7 +181,7 @@
 
     <picture>
       <div class="justify-img-center">
-        <img src="immagini/main-image.jpg" alt="main image" width="1470px" height="512px">
+        <img src="immagini/main-image.jpg" alt="main image" width="1470px" height="512px" id="main">
       </div>
     </picture>
 
